# modern-cpp-toolchain

./: LICENSE  README.md  global-top.vue  package.json  pnpm-lock.yaml  slides-en.md  slides.md  style.css
modern-cpp-template/: .gitignore  CMakeLists.txt
modern-cpp-template/src/: CMakeLists.txt  main.cpp
modern-cpp-template/test/: CMakeLists.txt  add_test.cpp
